--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -1,3 +1,9 @@
 page-settings {
-
+  .cover {
+    background-attachment: fixed;
+    min-height: 500px;
+    width: 100%;
+    background-position: center;
+    background-size: cover;
+  }
 }
