Fix small issue

--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -1,9 +1,8 @@
 page-settings {
   .cover {
-    background-attachment: fixed;
     min-height: 500px;
     width: 100%;
-    background-position: center;
+    background-position: center 100%;
     background-size: cover;
   }
 }
