--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -14,7 +14,7 @@ $font-path: "../assets/fonts";
 
 $text-color:        #000;
 $background-color:  #fff;
-
+$app-direction: multi;
 
 // Named Color Variables
 // --------------------------------------------------
