--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<ion-menu [content]="content">
+<ion-menu [content]="content" side="{{menuSide}}">
   <ion-header>
     <ion-toolbar color="primary">
       <ion-title>{{ authService.getCurrentSite().title }}</ion-title>
@@ -30,7 +30,7 @@
       </button>
     </ion-list>
     <ion-list>
-      <ion-list-header>{{ LOGOUT | translate }}</ion-list-header>
+      <ion-list-header>{{ 'LOGOUT' | translate }}</ion-list-header>
       <button menuClose ion-item (click)="authService.signOut()">
         <ion-icon name="log-out" item-start></ion-icon> {{ LOGOUT | translate }}
       </button>
