Fix logout trans

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -32,7 +32,7 @@
     <ion-list>
       <ion-list-header>{{ 'LOGOUT' | translate }}</ion-list-header>
       <button menuClose ion-item (click)="authService.signOut()">
-        <ion-icon name="log-out" item-start></ion-icon> {{ LOGOUT | translate }}
+        <ion-icon name="log-out" item-start></ion-icon> {{ 'LOGOUT' | translate }}
       </button>
     </ion-list>
   </ion-content>
