Add a todo for prevent tab

--- a/src/components/editor/editor.html
+++ b/src/components/editor/editor.html
@@ -6,6 +6,7 @@
     </span>
 
     <div class="{{classes.content}}">
+      <!--TODO: PreventTab-->
       <div contenteditable="true" id="content" [innerHTML]="content"></div>
     </div>
 
