--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,6 @@
 <ion-menu [content]="content" [side]="menuSide">
   <ion-header>
-    <ion-toolbar color="primary">
+    <ion-toolbar color="primary" *ngIf="authService.isAuth()">
       <ion-title>{{ authService.getCurrentSite().title }}</ion-title>
     </ion-toolbar>
   </ion-header>
