--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -25,7 +25,7 @@ $app-direction: multi;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #d17100,
+  primary:    #488aff,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
