--- a/src/components/editor/editor.scss
+++ b/src/components/editor/editor.scss
@@ -1,3 +1,18 @@
 editor {
+  div.editor-buttons {
+    position: fixed;
+    bottom: 0;
+    text-align: center;
+    width: 100%;
+    background: #eee;
+  }
 
+  #content {
+    padding: 16px 16px 120px 16px;
+  }
+
+  [contentEditable=true]:empty:not(:focus):before{
+    content:attr(data-text);
+    color: #999;
+  }
 }
