--- a/src/components/editor/editor.html
+++ b/src/components/editor/editor.html
@@ -8,7 +8,7 @@
 
     <div class="{{classes.content}}">
       <!--TODO: PreventTab-->
-      <div contenteditable="true" data-text="Content" id="content" padding [innerHTML]="content"></div>
+      <div id="content" class="entry-content" contenteditable="true" data-text="Content" padding [innerHTML]="content"></div>
     </div>
 
   </div>
