--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -41,6 +41,11 @@ button.active {
   background: #f1f1f1;
 }
 
+.s-pad-bottom-hard {
+  padding-bottom: 60px !important;
+}
+
+
 // Animations
 
 .animated {
