--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,18 +8,18 @@
   <ion-content>
     <!-- Avatar -->
     <ion-list>
-      <button ion-item *ngIf="authService.isAuth()">
+      <button menuClose ion-item *ngIf="authService.isAuth()" (click)="openPage()"
+              [ngClass]="{'active': getCurrentView() == 'ProfilePage'}">
         <ion-avatar item-start>
-          <img src="{{ account.user.getAvatar('tiny') }}">
+          <img src="{{ user.getAvatar('tiny') }}">
         </ion-avatar>
-        <h2>{{ this.account.user.getFullName() }}</h2>
-        <ion-note><small>{{ account.user.email }}</small></ion-note>
+        <h2>{{ user.getFullName() }}</h2>
+        <ion-note><small>{{ user.email }}</small></ion-note>
       </button>
     </ion-list>
     <!-- Views -->
     <ion-list no-lines>
-      <button menuClose ion-item *ngFor="let page of pages"
-              (click)="openPage(page)"
+      <button menuClose ion-item *ngFor="let page of pages" (click)="openPage(page.component)"
               [ngClass]="{'active': getCurrentView() == page.component.name}">
         <ion-icon name="{{ page.icon }}" small item-start></ion-icon> {{ page.title }}
       </button>
@@ -27,7 +27,7 @@
     <!-- Sites -->
     <ion-list no-lines *ngIf="authService.isAuth()">
       <ion-list-header>{{ 'SITES' | translate }}</ion-list-header>
-      <button ion-item menuClose *ngFor="let site of account.user.sites" (click)="authService.setCurrentSite(site)">
+      <button ion-item menuClose *ngFor="let site of user.sites" (click)="authService.setCurrentSite(site)">
         {{ site.title }}
         <ion-icon name="checkmark" item-end small color="primary" *ngIf="authService.getCurrentSite().id === site.id"></ion-icon>
       </button>
