--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -30,7 +30,8 @@ $colors: (
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
-  white:      #fff
+  white:      #fff,
+  gonevis:    #d17100
 );
 
 
