--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -23,10 +23,12 @@
   color: #f53d3d;
 }
 
-.page-loader ion-spinner.spinner {
+.page-loader ion-spinner.spinner,
+.no-results {
   position: absolute;
   margin: auto;
   top: 0 ;left: 0;bottom: 0;right: 0;
+  background-color: transparent;
 }
 
 .img-circle {
