--- a/src/components/editor/editor.html
+++ b/src/components/editor/editor.html
@@ -2,8 +2,19 @@
   <div class="{{ classes.actionbar }}">
 
     <div class="editor-buttons">
-      <button *ngFor="let action of actions" ion-button clear [innerHTML]="action.icon" (click)="action.result()">
-      </button>
+      <ion-buttons float-start>
+        <button *ngFor="let action of actions" ion-button clear [innerHTML]="action.icon" (click)="action.result()">
+        </button>
+      </ion-buttons>
+
+      <ion-buttons float-end>
+        <button ion-button clear icon-only (click)="insertLink()">
+          <ion-icon name="link"></ion-icon>
+        </button>
+        <button ion-button clear icon-only (click)="insertImage()">
+          <ion-icon name="image"></ion-icon>
+        </button>
+      </ion-buttons>
     </div>
 
     <div class="{{classes.content}}">
