--- a/src/pages/entry/entry.scss
+++ b/src/pages/entry/entry.scss
@@ -1,4 +1,9 @@
 page-entry {
+  .cover {
+    height: 256px;
+    background-size: cover;
+    background-position: center;
+  }
 }
 textarea {
   max-width: 100%;
