--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -41,6 +41,14 @@
   color: white;
 }
 
+.bg-white {
+  background-color: #fff;
+}
+
+.s-box {
+  box-shadow: 0 2px 2px rgba(0,0,0,0.05);
+}
+
 button.active {
   background: #f1f1f1;
 }
